fix font sizes for mobile readability

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,15 +28,6 @@ a:hover{
 .logo img{
   max-height:50px;
 }
-.dropdown-menu{
-  right:auto;
-  left:auto;
-}
-.dropdown-menu-right{
-  right:20px;
-  left:auto;
-}
-
 
 
 
